# ACT-Edge

./: CMakeLists.txt  README.md  package.xml
include/act_infer/: act_infer_app.hpp
include/utils/: conversion.hpp  postprocess.hpp  preprocess.hpp
src/: act_infer_app.cpp
