<?xml version="1.0"?>
<package format="3">
  <name>act_infer</name>
  <version>0.0.0</version>
  <description>ROS 2 Lifecycle Node Example</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>  <!-- 如果使用了消息类型 -->
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>airbot_controller_msgs</build_depend>
  
  <exec_depend>airbot_controller_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>  <!-- 如果使用了消息类型 -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

</package>